--- a/src/components/EducationCard/EducationCard.css
+++ b/src/components/EducationCard/EducationCard.css
@@ -1,7 +1,8 @@
 .education-container{
    display: grid;
-   grid-template-columns: repeat(3,1fr);
-   gap: 40px;
+   grid-template-columns: repeat(auto-fit, minmax(580px, 1fr));
+   gap: 20px;
+   margin-left: 40px;
    padding: 35px;
 }
 .education-card{
