--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,8 +2,8 @@
 .footer {
     padding: 20px;
     text-align: center;
-    position: absolute;
-    width: 100%;
+ 
+
    
     background-color: #fff;
     transition: background-color 0.5s ease;
